--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,12 @@
 
   <!-- Por aquí van font-awesome y Google Fonts -->
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@500&family=Poppins:wght@300&display=swap" rel="stylesheet">
+
   <!-- CSS de las profes -->
-  <link rel="stylesheet" href="https://beta.adalab.es/resources/stylesheets/all.css">
+  <link rel="stylesheet" href="https://beta.adalab.es/resources/stylesheets/all.scss">
 
   <title>Gestor Proyectos</title>
 </head>
