--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@500&family=Poppins:wght@300&display=swap" rel="stylesheet">
-
+<!-- <link href="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="> -->
+  
   <!-- CSS de las profes -->
   <link rel="stylesheet" href="https://beta.adalab.es/resources/stylesheets/all.scss">
 
