fixed regex URL

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
 <!-- <link href="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="> -->
   
   <!-- CSS de las profes -->
-  <link rel="stylesheet" href="https://beta.adalab.es/resources/stylesheets/all.scss">
+  <!-- <link rel="stylesheet" href="https://beta.adalab.es/resources/stylesheets/all.scss"> -->
+  <link rel="stylesheet" href="../src/styles/main.scss">
 
   <title>Gestor Proyectos</title>
 </head>
