--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Por aquí van font-awesome y Google Fonts -->
 
-  <!-- Por aquí van font-awesome y Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@500&family=Poppins:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <!-- <link href="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="> -->
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@500&family=Poppins:wght@300&display=swap" rel="stylesheet">
-<!-- <link href="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="> -->
-  
-  <!-- CSS de las profes -->
-  <!-- <link rel="stylesheet" href="https://beta.adalab.es/resources/stylesheets/all.scss"> -->
-  <link rel="stylesheet" href="../src/styles/main.scss">
+    <!-- CSS de las profes -->
+    <!-- <link rel="stylesheet" href="https://beta.adalab.es/resources/stylesheets/all.scss"> -->
+    <link rel="stylesheet" href="../src/styles/main.scss" />
 
-  <title>Gestor Proyectos</title>
-</head>
+    <title>Cool Project Station</title>
+  </head>
 
-<body>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
