--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/station.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Por aquí van font-awesome y Google Fonts -->
